# sevenstock-workspace

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  infra.tf
.cargo/: config.toml
bruno-collection/: aaa.bru
crates/libs/lib-auth/: Cargo.toml
crates/libs/lib-auth/src/: config.rs  lib.rs
crates/libs/lib-auth/src/api_key/: error.rs  mod.rs
crates/libs/lib-auth/src/oauth2/: mod.rs
crates/libs/lib-auth/src/pwd/: config.rs  error.rs  mod.rs
crates/libs/lib-auth/src/secret/: mod.rs
crates/libs/lib-auth/src/token/: config.rs  deprecated_mod.rs  error.rs  jwks.rs  mod.rs  rotating_keys.rs  secrets.rs
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-core/src/: aws.rs  config.rs  lib.rs
crates/libs/lib-core/src/ctx/: error.rs  mod.rs
crates/libs/lib-core/src/model/: api_keys.rs  aws.rs  error.rs  mod.rs  organisation.rs  permission.rs  refresh_token.rs  role.rs  user.rs
crates/libs/lib-core/src/model/base/: crud_fns.rs  macro_utils.rs  mod.rs  utils.rs
crates/libs/lib-core/src/model/repositories/: user.rs
crates/libs/lib-core/src/model/store/: mod.rs
crates/libs/lib-core/src/model/store/dbx/: error.rs  mod.rs
crates/libs/lib-grpc/: Cargo.toml  build.rs
crates/libs/lib-grpc/proto/: auth.proto  refresh_tokens.proto
crates/libs/lib-grpc/src/: error.rs  lib.rs
crates/libs/lib-proc-macros/: Cargo.toml
crates/libs/lib-proc-macros/src/: db_entity.rs  lib.rs
crates/libs/lib-utils/: Cargo.toml
crates/libs/lib-utils/src/: b64.rs  envs.rs  lib.rs  secrets.rs  time.rs
crates/libs/lib-web/: Cargo.toml
crates/libs/lib-web/src/: error.rs  lib.rs  permission.rs  services.rs
crates/libs/lib-web/src/handlers/: get_presigned_url.rs  handlers_api_keys.rs  handlers_exchange.rs  handlers_login.rs  handlers_signup.rs  mod.rs  refresh_token.rs  signup.rs  well_known.rs
crates/libs/lib-web/src/handlers/handlers_oauth2/: authorize.rs  token.rs
crates/libs/lib-web/src/middleware/: mod.rs  mw_api_key.rs  mw_auth.rs  mw_rate_limiter.rs  mw_require_perm.rs
crates/libs/lib-web/src/routes/: mod.rs  routes_static.rs
crates/services/api-gateway/: Cargo.toml  Dockerfile
crates/services/api-gateway/src/: main.rs
crates/services/api-gateway/src/web/: mod.rs  routes_api_keys.rs  routes_login.rs
crates/services/auth-server/: Cargo.toml  Dockerfile
crates/services/auth-server/src/: config.rs  main.rs
crates/services/auth-server/src/handlers/: handlers_well_known.rs  mod.rs
crates/services/auth-server/src/model/: user.rs
crates/services/auth-server/src/routes/: mod.rs  well_known.rs
crates/services/aws-lambdas/: Cargo.toml  README.md
crates/services/aws-lambdas/src/: event_handler.rs  main.rs
crates/services/web-server/: Cargo.toml  Dockerfile
crates/services/web-server/src/: error.rs  main.rs
crates/services/web-server/src/web/: mod.rs  routes_login.rs  routes_oauth2.rs  routes_well_known.rs
migrations/: 20250815172454_init.sql
proto/: calculator.proto
sql/: auth.sql  init.sql
web-folder/: .prettierignore  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
web-folder/apps/front-end/: Dockerfile  package.json  pnpm-lock.yaml  vite.config.ts
web-folder/apps/front-end/src/: app.css  service-worker.ts
web-folder/apps/front-end/src/lib/: icons.ts  index.ts  spaces.svelte.ts
web-folder/apps/front-end/src/lib/service-worker/: request.ts  send-message.ts  set_token.ts
web-folder/apps/front-end/src/lib/stores/: user.svelte.ts
web-folder/apps/front-end/src/routes/: +layout.svelte  +page.svelte
web-folder/apps/front-end/src/routes/(protected)/: +layout.svelte  +page.svelte
web-folder/apps/front-end/src/routes/retrieve-token-pair/: +server.ts
web-folder/apps/front-end/src/routes/test/: +server.ts
web-folder/apps/front-end/src/service-worker/: index.ts  make-request.ts  request.ts  result.ts
web-folder/apps/oauth-login/: package.json  svelte.config.js
web-folder/apps/oauth-login/src/: app.css
web-folder/apps/oauth-login/src/routes/: +page.svelte
web-folder/apps/website/: package.json
web-folder/apps/website/src/components/: Welcome.astro
web-folder/libs/lib-components/: package.json
web-folder/libs/lib-components/src/lib/: avatar.svelte  breadcrumbs.svelte  button.svelte  dropdown-item.svelte  dropdown.svelte  form.svelte  header.svelte  icon.svelte  image-preview.svelte  index.ts  input.svelte  load-bar.svelte  popover.svelte  profile.svelte  qr.svelte  sidebar.svelte  upload-field.svelte
web-folder/libs/lib-components/src/lib/buttons/: button.svelte  close-button.svelte  index.ts
web-folder/libs/lib-components/src/lib/dialogs/: alert-dialog.svelte  dialog.svelte
web-folder/libs/lib-components/src/lib/form/: form-context.ts  form.svelte  index.ts  input.svelte
web-folder/libs/lib-components/src/lib/headers/: header.svelte  index.ts  page-header.svelte
web-folder/libs/lib-components/src/lib/navigation/: context.ts  index.ts  link.svelte  menu-space.svelte  nav-button.svelte  nav-link.svelte  profile.svelte  sidebar-space.svelte  sidebar.svelte  sub-menu.svelte
web-folder/libs/lib-components/src/lib/separators/: horizontal.svelte  index.ts  vertical.svelte
web-folder/libs/lib-components/src/lib/settings/: link.svelte  settings.svelte
web-folder/libs/lib-components/src/lib/sidebar/: index.ts  nav-link.svelte  nav-link.ts  profile.svelte  sidebar-separator.svelte  sidebar-space.svelte  sidebar.svelte  user-info.svelte
web-folder/libs/lib-core/: package.json
web-folder/libs/lib-core/src/lib/: better-fetch.svelte.ts  index.ts  result.ts
web-folder/libs/lib-core/src/lib/schemas/: index.ts  token_claims.ts  user.ts
web-folder/libs/lib-core/src/lib/service-worker/: index.ts  make-request.ts  request.ts
web-folder/libs/lib-web-utils/: package.json
web-folder/libs/lib-web-utils/src/lib/: index.ts
web-folder/libs/shared-schemas/: package.json
web-folder/libs/shared-schemas/src/lib/: user.ts
web-folder/src/: hooks.server.ts  service-worker.ts
web-folder/src/routes/: +layout.svelte  +page.svelte
web-folder/src/routes/retrieve-token-pair/: +server.ts
(+13 files in other folders)
