[package]
name = "lib-core"
version = "0.1.0"
edition = "2024"


[dependencies]
lib-utils = { path = "../../libs/lib-utils" }
lib-auth = { path = "../../libs/lib-auth" }

sqlx = { workspace = true }
serde = { workspace = true }
redis = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
secrecy = { workspace = true }
tracing = { workspace = true }


uuid = { workspace = true }
thiserror = { workspace = true }
tokio = "1.45.0"
sea-query.workspace = true
sea-query-binder.workspace = true
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-sdk-elasticache = { workspace = true }
modql = { version = "0.4.1", features = ["with-sea-query"] }
strum.workspace = true
strum_macros.workspace = true

[lints]
workspace = true
