[package]
name = "lib-web"
version = "0.1.0"
edition = "2024"

[dependencies]
axum-extra = "0.10.1"
lib-auth = { path = "../../libs/lib-auth" }
lib-core = { path = "../../libs/lib-core" }
axum = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }


[lints]
workspace = true
