[package]
name = "lib-web"
version = "0.1.0"
edition = "2024"

[dependencies]
axum-extra = { version = "0.10.1", features = ["cookie", "typed-header"] }
lib-auth = { path = "../../libs/lib-auth" }
lib-core = { path = "../../libs/lib-core" }
lib-grpc = { path = "../../libs/lib-grpc" }

axum.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
redis.workspace = true
aws-sdk-secretsmanager.workspace = true
aws-sdk-s3.workspace = true
aws-sdk-elasticache.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true


[lints]
workspace = true
