[package]
name = "lib-web"
version = "0.1.0"
edition = "2024"

[dependencies]
axum-extra = { version = "0.10.1", features = ["cookie", "typed-header"] }
lib-auth = { path = "../../libs/lib-auth" }
lib-core = { path = "../../libs/lib-core" }

axum.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
redis.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
moka = { version = "0.12.11", features = ["future"] }
tower-http.workspace = true
serde-email.workspace = true

[lints]
workspace = true
