[package]
name = "auth-server"
version = "0.1.0"
edition = "2024"

[dependencies]
lib-core = { path = "../../libs/lib-core" }
lib-web = { path = "../../libs/lib-web" }
lib-auth = { path = "../../libs/lib-auth", features = ["private"]}

axum.workspace = true
sea-query.workspace = true
sea-query-binder.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[lints]
workspace = true
