[package]
name = "web-server"
version = "0.1.0"
edition = "2024"

[dependencies]
lib-utils = { path = "../../libs/lib-utils" }
lib-core = { path = "../../libs/lib-core" }
lib-web = { path = "../../libs/lib-web" }
lib-auth = { path = "../../libs/lib-auth", features = ["private"]}


tracing = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
redis = { workspace = true }
secrecy = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2.3"


[lints]
workspace = true
